--- a/TA_beta/informasi.tex
+++ b/TA_beta/informasi.tex
@@ -3,10 +3,10 @@
 %=====================================================================
 % Judul Tugas Akhir
 \newcommand{\kodeTA}{%
-    PROPOSAL TUGAS AKHIR% Tuliskan kode mata kuliah dalam bahasa Indonesia
+    TUGAS AKHIR% Tuliskan kode mata kuliah dalam bahasa Indonesia
 }
 \newcommand{\kodeTAInggris}{%
-    FINAL REPORT PROPOSAL% Tuliskan kode mata kuliah dalam bahasa Inggris
+    FINAL REPORT% Tuliskan kode mata kuliah dalam bahasa Inggris
 } 
 %=====================================================================
 % Judul Tugas Akhir
