--- a/TA_beta/konten/bab02.tex
+++ b/TA_beta/konten/bab02.tex
@@ -218,6 +218,6 @@ Metode Projector Augmented-Wave (PAW) merupakan suatu pendekatan yang menggabung
 Pendekatan ini memungkinkan perhitungan yang lebih akurat tanpa harus mengorbankan efisiensi komputasi secara signifikan. Dengan PAW, perhitungan sifat-sifat elektron, terutama di daerah inti yang kritis bagi interaksi kimia, dapat dilakukan dengan lebih tepat. Metode ini juga sangat berguna dalam menangani sistem dengan konfigurasi elektronik kompleks, misalnya pada material transisi atau sistem dengan defek struktural \citep{Blochl1994}. Secara konseptual, PAW dapat dilihat sebagai transformasi linear dari basis pseudopotential ke basis all-electron, yang menjaga keuntungan komputasi dari pendekatan pseudopotential sambil memulihkan informasi penting yang hilang pada daerah inti. \subsection{Quantum Espresso}
 Quantum Espresso merupakan salah satu paket perangkat lunak open-source yang populer untuk perhitungan DFT. Perangkat lunak ini mengimplementasikan berbagai metode numerik, termasuk penggunaan basis \emph{planewave}, pseudopotentials, dan metode PAW, untuk menghitung struktur elektronik, energi total, serta sifat dinamik atomik dalam material \citep{Giannozzi2009}. Paket Quantum Espresso dilengkapi dengan berbagai modul yang memungkinkan pengguna untuk melakukan perhitungan optimasi struktur, simulasi dinamika molekuler, serta analisis pita energi. Selain itu, fleksibilitas dalam memilih fungsional pertukaran-korelasi, skema sampling ruang reciprocal, dan parameter kisi menjadikan perangkat lunak ini sangat berguna untuk penelitian material, terutama dalam studi material 2D dan sistem kompleks. Dokumentasi dan komunitas pengguna yang luas juga mendukung pengembangan dan penerapan metode DFT yang lebih canggih. Dalam praktiknya, input file Quantum Espresso memuat parameter-parameter penting seperti jenis fungsional XC, kriteria konvergensi, dan detail pseudopotentials yang digunakan, sehingga memungkinkan reproduksibilitas dan verifikasi hasil perhitungan di berbagai sistem studi. %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Studi Lanjutan dan Pengembangan Metodologi}
-Sebagai kelanjutan dari tinjauan pustaka di atas, sejumlah penelitian terbaru telah mengeksplorasi aspek tambahan pada material 2D serta mengembangkan metodologi komputasi yang semakin canggih. Studi-studi ini tidak hanya memperkaya pemahaman kita terhadap sifat fundamental material 2D, tetapi juga memberikan kontribusi signifikan dalam peningkatan teknik simulasi dan perhitungan kuantum. Penelitian mengenai sifat termal material 2D, misalnya, telah diteliti secara mendalam oleh \citep{Khan2017}, yang menunjukkan konduktivitas termal yang sangat tinggi pada grafena. Temuan ini melengkapi studi sebelumnya dan membuka peluang untuk aplikasi pendinginan pasif dalam perangkat nanoelektronik. Di samping itu, teori transport kuantum yang dikembangkan oleh Ando \citep{ando_dynamical_2002} menyediakan kerangka teoretis untuk memahami mobilitas dan perilaku elektron dalam sistem dua dimensi, yang sangat krusial untuk pengembangan perangkat berbasis 2D. Analisis struktur dan cacat juga mengalami kemajuan melalui pendekatan eksperimental dan komputasional. Penelitian oleh Zhang \citep{Zhang2020} dan \citep{Slotman2013} menyoroti peran penting cacat titik dalam memodifikasi sifat elektronik dan optik material 2D. Selain itu, pendekatan representation-independent yang lebih baru, seperti yang diuraikan oleh \citep{Shen2022}, telah meningkatkan keakuratan perhitungan DFT untuk sistem dengan variasi densitas yang kompleks. Dalam aspek kelistrikan, penelitian oleh Wang \citep{Wang2017} memberikan wawasan mengenai peningkatan performa elektronik melalui rekayasa heterostruktur, sedangkan studi oleh \citep{Munro2020} dan \citep{Huang2012} menyelidiki mekanisme pembentukan cacat dan pengaruhnya terhadap konduktivitas. Pembaruan ulasan tentang material 2D juga disajikan oleh \citep{Bhimanapati2016}, yang memberikan gambaran menyeluruh mengenai tren riset di bidang ini. Dari sisi manajemen termal, \citep{Khan2017} menekankan pentingnya pengendalian panas dalam perangkat nanoelektronik berbasis material 2D. Sementara itu, metode komputasi juga terus berkembang dengan penerapan teknik machine learning untuk prediksi sifat material, seperti yang ditunjukkan oleh \citep{Zheng2025}. Studi mengenai cacat asli (native defects) dalam material 2D juga mendapatkan perhatian melalui penelitian \citep{Weston2018}. Dalam ranah simulasi komputer, karya klasik yang membahas algoritma dan metodologi MD tetap menjadi referensi penting. Misalnya, karya \citep{Allen1989}, \citep{Rapaport2004}, dan \citep{Allen1989} terus dijadikan acuan dalam pengembangan metode simulasi dinamika molekuler. Di sisi lain, peningkatan dalam perhitungan DFT melalui penggunaan fungsional hibrida telah didorong oleh penelitian \citep{Becke1993}, yang telah membuka jalan bagi pengembangan fungsional pertukaran-korelasi yang lebih akurat. Sebagai tambahan, ulasan terbaru yang menyatukan berbagai pendekatan teoretis dan eksperimental juga memberikan kerangka kerja yang lebih holistik untuk mempelajari sifat-sifat sistem banyak partikel, seperti yang diuraikan dalam studi \citep{Lele2022}. Dengan demikian, integrasi dari berbagai metodologi ini membentuk dasar yang kuat untuk penelitian material 2D di masa depan, serta memberikan landasan untuk pengembangan teknologi nanoelektronik yang lebih inovatif. %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+Sebagai kelanjutan dari tinjauan pustaka di atas, sejumlah penelitian terbaru telah mengeksplorasi aspek tambahan pada material 2D serta mengembangkan metodologi komputasi yang semakin canggih. Studi-studi ini tidak hanya memperkaya pemahaman kita terhadap sifat fundamental material 2D, tetapi juga memberikan kontribusi signifikan dalam peningkatan teknik simulasi dan perhitungan kuantum. Penelitian mengenai sifat termal material 2D, misalnya, telah diteliti secara mendalam oleh \citep{Khan2017}, yang menunjukkan konduktivitas termal yang sangat tinggi pada grafena. Temuan ini melengkapi studi sebelumnya dan membuka peluang untuk aplikasi pendinginan pasif dalam perangkat nanoelektronik. Di samping itu, teori transport kuantum yang dikembangkan oleh Ando \citep{ando2002} menyediakan kerangka teoretis untuk memahami mobilitas dan perilaku elektron dalam sistem dua dimensi, yang sangat krusial untuk pengembangan perangkat berbasis 2D. Analisis struktur dan cacat juga mengalami kemajuan melalui pendekatan eksperimental dan komputasional. Penelitian oleh Zhang \citep{Zhang2020} dan \citep{Slotman2013} menyoroti peran penting cacat titik dalam memodifikasi sifat elektronik dan optik material 2D. Selain itu, pendekatan representation-independent yang lebih baru, seperti yang diuraikan oleh \citep{Shen2022}, telah meningkatkan keakuratan perhitungan DFT untuk sistem dengan variasi densitas yang kompleks. Dalam aspek kelistrikan, penelitian oleh Wang \citep{Wang2017} memberikan wawasan mengenai peningkatan performa elektronik melalui rekayasa heterostruktur, sedangkan studi oleh \citep{Munro2020} dan \citep{Huang2012} menyelidiki mekanisme pembentukan cacat dan pengaruhnya terhadap konduktivitas. Pembaruan ulasan tentang material 2D juga disajikan oleh \citep{Bhimanapati2016}, yang memberikan gambaran menyeluruh mengenai tren riset di bidang ini. Dari sisi manajemen termal, \citep{Khan2017} menekankan pentingnya pengendalian panas dalam perangkat nanoelektronik berbasis material 2D. Sementara itu, metode komputasi juga terus berkembang dengan penerapan teknik machine learning untuk prediksi sifat material, seperti yang ditunjukkan oleh \citep{Zheng2025}. Studi mengenai cacat asli (native defects) dalam material 2D juga mendapatkan perhatian melalui penelitian \citep{Weston2018}. Dalam ranah simulasi komputer, karya klasik yang membahas algoritma dan metodologi MD tetap menjadi referensi penting. Misalnya, karya \citep{Allen1989}, \citep{Rapaport2004}, dan \citep{Allen1989} terus dijadikan acuan dalam pengembangan metode simulasi dinamika molekuler. Di sisi lain, peningkatan dalam perhitungan DFT melalui penggunaan fungsional hibrida telah didorong oleh penelitian \citep{Becke1993}, yang telah membuka jalan bagi pengembangan fungsional pertukaran-korelasi yang lebih akurat. Sebagai tambahan, ulasan terbaru yang menyatukan berbagai pendekatan teoretis dan eksperimental juga memberikan kerangka kerja yang lebih holistik untuk mempelajari sifat-sifat sistem banyak partikel, seperti yang diuraikan dalam studi \citep{Lele2022}. Dengan demikian, integrasi dari berbagai metodologi ini membentuk dasar yang kuat untuk penelitian material 2D di masa depan, serta memberikan landasan untuk pengembangan teknologi nanoelektronik yang lebih inovatif. %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % AKHIR DOKUMEN
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
