--- a/TA_beta/konten/bab03.tex
+++ b/TA_beta/konten/bab03.tex
@@ -81,7 +81,7 @@ Dalam prosedur penelitian ini, kami secara komprehensif membahas perangkat dan m
     \centering
     \includegraphics[width=0.8\linewidth]{gambar_hasil/structures_all.png}
     \caption{Model hBN 4x4x1 dengan a) struktur hBN murni b) struktur hBN dengan cacat N-N c) struktur hBN dengan cacat B-B}
-    \label{fig:enter-label}
+    \label{Struktur hBN 4x4x1}
 \end{figure}
 
 \subsection{Detail Komputasi}
@@ -90,14 +90,14 @@ Diagram alir komputasi yang akan dilakukan dalam penelitian ini dapat dilihat pa
     \centering
     \includegraphics[width=0.35\linewidth]{gambar/MD.drawio.png}
     \caption{Alur Komputasi MD}
-    \label{fig:enter-label}
+    \label{Diagram Alir MD}
 \end{figure}
 
 \begin{figure}
     \centering
     \includegraphics[width=0.5\linewidth]{gambar/DFT.drawio.png}
     \caption{Alur Komputasi DFT }
-    \label{fig:enter-label}
+    \label{Diagram Alir DFT}
 \end{figure}
 
 \subsection{Langkah Kerja}
