--- a/TA_beta/main.tex
+++ b/TA_beta/main.tex
@@ -38,7 +38,7 @@
     \pagenumbering{roman}
 
     \input{./halaman-depan/cover}
-    \%halamanKosong
+    %\halamanKosong
     
 %---------------------------------------------------------------------
 %    HALAMAN DEPAN
@@ -68,7 +68,7 @@
     %\halamanKosong
     
     % DAFTAR TABEL
-    %\input{./halaman-depan/daftarTabel}
+    \input{./halaman-depan/daftarTabel}
     %\halamanKosong
     
 %---------------------------------------------------------------------
