--- a/TA_beta/main.tex
+++ b/TA_beta/main.tex
@@ -90,7 +90,7 @@
     \renewcommand{\bibname}{DAFTAR PUSTAKA}
     \addcontentsline{toc}{chapter}{DAFTAR PUSTAKA}
     %\bibliographystyle{unsrt} % untuk style dengan nomor
-    \bibliographystyle{plain} % untuk style dengan nama
+    \bibliographystyle{plainnat} % untuk style dengan nama
     \bibliography{pustaka}
     
 %---------------------------------------------------------------------
